--- a/facebook-web/package.json
+++ b/facebook-web/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^4.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
